comunicate electron and angular

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,6 @@
     {{ 'PAGES.HOME.TITLE' | translate }}
   </h1>
 
-  <button type="button" (click)="blocks()">blocks</button>
-  <button type="button" (click)="mineBlock('data')">mineBlock</button>
-  <button type="button" (click)="peers()">peers</button>
-  <button type="button" (click)="addPeer('127.0.0.1','8080')">addPeer</button>
+  <app-peers></app-peers>
+  <app-blocks></app-blocks>
 </div>
