--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,8 +1,9 @@
 .container {
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
 
   background: url(../../../assets/background.jpg) no-repeat center fixed;
   -webkit-background-size: cover; /* pour anciens Chrome et Safari */
@@ -11,7 +12,7 @@
   .title {
     color: white;
     margin:0;
-    padding:50px 20px;
+    padding:25px 20px;
   }
 
 }
