--- a/src/app/components/blocks/blocks.component.scss
+++ b/src/app/components/blocks/blocks.component.scss
@@ -1,1 +1,6 @@
-div {width:600px; height:400px; background-color:#ee0000; overflow:scroll;}
+div {
+  width: 600px;
+  height: 200px;
+  background-color: #ee0000;
+  overflow: scroll;
+}
