--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-  <h1 class="title">
+  <!-- <h1 class="title">
     {{ 'PAGES.HOME.TITLE' | translate }}
-  </h1>
+  </h1> -->
 
   <app-peers></app-peers>
   <app-blocks></app-blocks>
+  <app-message></app-message>
 </div>
