--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
   </h1> -->
 
   <app-peers></app-peers>
-  <app-blocks></app-blocks>
+  <!-- <app-blocks></app-blocks> -->
+  <app-message-list></app-message-list>
   <app-message></app-message>
 </div>
