--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
+
+html,
+body {
   margin: 0;
   padding: 0;
-
   height: 100%;
-
   color: aliceblue;
   background-color: black;
+  // font-family: 'Montserrat', sans-serif;
+  //   font-family: Lato, "Noto Sans JP", "游ゴシック Medium", "游ゴシック体", "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  //   font-family: "Noto Sans Japanese"; 
+  //   font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic';
+  font-family: 'Montserrat', sans-serif, Lato, "Noto Sans JP", "游ゴシック Medium", "游ゴシック体", "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 }
