--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     {{ 'PAGES.HOME.TITLE' | translate }}
   </h1> -->
 
-  <app-peers></app-peers>
+  <!-- <app-peers></app-peers> -->
   <!-- <app-blocks></app-blocks> -->
   <app-message-list></app-message-list>
   <app-message></app-message>
