--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,7 +1,5 @@
-<button type="button" (click)="mineBlock('test')">mineBlock</button>
-
 <div>
-  <table border="1" width="600" height="200" cellspacing="0" cellpadding="5">
+  <table border="1" cellspacing="0" cellpadding="5">
     <thead>
       <tr>
         <th>index</th>
@@ -19,7 +17,7 @@
         <td>{{block.hash | slice:0:12}}...</td>
         <td>{{block.previousHash | slice:0:12}}...</td>
         <td>{{block.timestamp}}</td>
-        <td>{{block.data}}</td>
+        <td>{{block.data | slice:0:20}}...</td>
         <td>{{block.difficulty}}</td>
         <td>{{block.nonce}}</td>
       </tr>
