--- a/src/app/components/message-list/message-list.component.scss
+++ b/src/app/components/message-list/message-list.component.scss
@@ -35,20 +35,24 @@
 // 
 
 #box-list {
+  padding-bottom: 200px;
+  // height: 600px;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around; // align-items: center;
-  align-items: stretch;
+  justify-content: space-around;
+  align-items: flex-start;
+  align-content: flex-start;
 
-  background: #f7f7f7;
   color: #000000;
+  background: #f7f7f7;
 }
 
 .box {
   flex-basis: 250px;
   background: #FFF;
   font-size: 1.0em;
-  margin: 4px;
+  margin: 0.5em;
 }
 
 .box-title {
@@ -57,6 +61,12 @@
   text-align: center;
   font-weight: bold;
   letter-spacing: 0.05em;
+}
+
+.box-text {
+  width: 250px;
+  word-break: break-all;
+  white-space: pre-line;
 }
 
 .box-footer {
