--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -17,7 +17,7 @@
         <td>{{block.hash | slice:0:12}}...</td>
         <td>{{block.previousHash | slice:0:12}}...</td>
         <td>{{block.timestamp}}</td>
-        <td>{{block.data | slice:0:20}}...</td>
+        <td>{{block.data }}</td>
         <td>{{block.difficulty}}</td>
         <td>{{block.nonce}}</td>
       </tr>
