--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,6 @@ body {
   //   font-family: "Noto Sans Japanese"; 
   //   font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic';
   font-family: 'Montserrat', sans-serif, Lato, "Noto Sans JP", "游ゴシック Medium", "游ゴシック体", "Yu Gothic Medium", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
+  @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 }
