--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,41 +1,20 @@
 .container {
-  background: url(../../../assets/background.jpg) no-repeat center fixed;
-  -webkit-background-size: cover;
-  /* pour anciens Chrome et Safari */
-  background-size: cover;
-  /* version standardisée */
-  // width: 100%;
-  // position: relative;
-  // height: auto !important;
-  // height: 100%;
-  // min-height: 100%; 
-
-  // display: flex;
-  // flex-direction: column;
-  // min-height: 100vh;
 
   position: relative;
   min-height: 100%;
   
-  // .title {
-  //   color: white;
-  //   margin:0;
-  //   padding:25px 20px;
-  // }
-
   app-message-list {
     background-color: lightgray;
-    padding-bottom: 200px;
-
+    padding-bottom: 300px;
   }
+
   app-message {
     background-color: lightblue;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 200px;
+    height: 300px;
     text-align: center;
-    // overflow: hidden;
-    // margin-top: auto;
+    box-shadow:0px -1px 2px #54757a;
   }
 }
